# multicore-bouncing-balls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: report.tex
include/: Ball.h  Config.h  GPUManager.h  Grid.h  Renderer.h  Simulation.h  Types.h
src/: Ball.cpp  GPUManager.cpp  Grid.cpp  Renderer.cpp  Simulation.cpp  main.cpp
src/kernels/: simulation.cl
